Fixed alignment issues in safari, changed heatmap library to reduce load times

--- a/frontend/src/AddDream.css
+++ b/frontend/src/AddDream.css
@@ -53,8 +53,7 @@
 .analyzeButton {
     background-color: #FFF39A;
     border: none;
-    margin-top: 20px;
-    margin-right: 20px;
+    margin: 20px auto auto auto;
     height: 40px;
     width: 180px;
     border-radius: 100px;
@@ -89,10 +88,10 @@
     padding-left: 1%;
     padding-right: 0.5%;
     padding-bottom: 1%;
-    margin-top: 3%;
+    margin: 3% auto auto auto;
     font-size: 20px;
     border-radius: 15px;
-    text-align: left;
+    text-align: center;
     justify-self: center;
     white-space: pre-wrap;
     justify-items: center;
