--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,13 +37,13 @@ nav {
     width: 80%;
     justify-self: center;
     justify-content: space-around;
+    margin: auto;
 }
 
 .navButton {
     background-color: #FFF39A;
     border: none;
-    margin-top: 20px;
-    margin-right: 20px;
+    margin: 20px 20px auto auto;
     height: 40px;
     width: 180px;
     border-radius: 100px;
