--- a/frontend/src/auth.css
+++ b/frontend/src/auth.css
@@ -19,7 +19,7 @@
     padding-left: 0.5%;
     padding-right: 0.5%;
     padding-bottom: 1%;
-    margin-top: 3%;
+    margin: 3% auto 0 auto;
     font-size: 20px;
     border-radius: 15px;
     text-align: center;
@@ -65,6 +65,7 @@
     height: 100%;
     color: #2D3173;
     justify-items: center;
+    margin: auto;
   }
 
   #names {
@@ -120,8 +121,7 @@
   .signInButton {
     background-color: #2D3173;
     border: none;
-    margin-top: 30px;
-    margin-bottom: 35px;
+    margin: 30px auto 35px auto;
     height: 40px;
     width: 180px;
     border-radius: 100px;
